--- a/packages/react-scripts/package.json
+++ b/packages/react-scripts/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jdcrensh/react-scripts",
-  "version": "0.9.6-2",
+  "version": "0.9.6-13",
   "description": "Configuration and scripts for Create React App.",
   "repository": "jdcrensh/create-react-app",
   "license": "BSD-3-Clause",
@@ -23,6 +23,7 @@
     "react-scripts": "./bin/react-scripts.js"
   },
   "dependencies": {
+    "archiver": "^1.3.0",
     "autoprefixer": "6.7.2",
     "babel-core": "6.22.1",
     "babel-eslint": "7.1.1",
@@ -50,11 +51,14 @@
     "html-webpack-plugin": "2.24.0",
     "http-proxy-middleware": "0.17.3",
     "jest": "18.1.0",
+    "jsforce": "^1.7.1",
     "json-loader": "0.5.4",
     "object-assign": "4.1.1",
     "postcss-loader": "1.2.2",
     "promise": "7.1.1",
+    "promisify-node": "^0.4.0",
     "react-dev-utils": "^0.5.2",
+    "stream-buffers": "^3.0.1",
     "style-loader": "0.13.1",
     "url-loader": "0.5.7",
     "webpack": "1.14.0",
