--- a/packages/react-scripts/package.json
+++ b/packages/react-scripts/package.json
@@ -5,7 +5,7 @@
   "repository": "jdcrensh/create-react-app",
   "license": "BSD-3-Clause",
   "engines": {
-    "node": ">=4"
+    "node": ">=6"
   },
   "bugs": {
     "url": "https://github.com/jdcrensh/create-react-app/issues"
@@ -29,6 +29,7 @@
     "babel-eslint": "7.1.1",
     "babel-jest": "18.0.0",
     "babel-loader": "6.2.10",
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-preset-react-app": "^2.2.0",
     "babel-runtime": "^6.20.0",
     "case-sensitive-paths-webpack-plugin": "1.1.4",
