--- a/packages/react-scripts/package.json
+++ b/packages/react-scripts/package.json
@@ -29,7 +29,6 @@
     "babel-eslint": "7.1.1",
     "babel-jest": "18.0.0",
     "babel-loader": "6.2.10",
-    "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-preset-react-app": "^2.2.0",
     "babel-runtime": "^6.20.0",
     "case-sensitive-paths-webpack-plugin": "1.1.4",
@@ -58,6 +57,7 @@
     "postcss-loader": "1.2.2",
     "promise": "7.1.1",
     "promisify-node": "^0.4.0",
+    "raw-loader": "^0.5.1",
     "react-dev-utils": "^0.5.2",
     "stream-buffers": "^3.0.1",
     "style-loader": "0.13.1",
