Fix jest and CSS Modules

--- a/packages/react-scripts/package.json
+++ b/packages/react-scripts/package.json
@@ -61,6 +61,7 @@
     "fs-extra": "0.30.0",
     "html-webpack-plugin": "2.24.0",
     "http-proxy-middleware": "0.17.3",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "18.1.0",
     "jsforce": "^1.7.1",
     "json-loader": "0.5.4",
