--- a/packages/react-scripts/package.json
+++ b/packages/react-scripts/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "react-scripts",
-  "version": "1.0.5",
-  "description": "Configuration and scripts for Create React App.",
-  "repository": "facebookincubator/create-react-app",
+  "name": "salesforce-react-scripts",
+  "version": "1.0.6-0",
+  "description": "Configuration and scripts for Create React App for Salesforce",
+  "repository": "jdcrensh/create-react-app#salesforce",
   "license": "BSD-3-Clause",
   "engines": {
     "node": ">=6"
   },
   "bugs": {
-    "url": "https://github.com/facebookincubator/create-react-app/issues"
+    "url": "https://github.com/jdcrensh/create-react-app/issues"
   },
   "files": [
     "bin",
@@ -21,6 +21,7 @@
     "react-scripts": "./bin/react-scripts.js"
   },
   "dependencies": {
+    "archiver": "^1.3.0",
     "autoprefixer": "7.1.0",
     "babel-core": "6.24.1",
     "babel-eslint": "7.2.3",
@@ -42,14 +43,20 @@
     "extract-text-webpack-plugin": "2.1.0",
     "file-loader": "0.11.1",
     "fs-extra": "3.0.1",
+    "glob": "^7.1.2",
     "html-webpack-plugin": "2.28.0",
     "jest": "20.0.3",
+    "jsforce": "^1.8.0",
+    "lodash": "^4.17.4",
+    "node-status": "^1.0.0",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.0.0",
     "postcss-loader": "2.0.5",
     "promise": "7.1.1",
+    "promisify-node": "^0.4.0",
     "react-dev-utils": "^2.0.0",
     "react-error-overlay": "^1.0.5",
+    "stream-buffers": "^3.0.1",
     "style-loader": "0.17.0",
     "sw-precache-webpack-plugin": "0.9.1",
     "url-loader": "0.5.8",
