Change custom babel to webpack, update env vars

--- a/packages/react-scripts/template/.env
+++ b/packages/react-scripts/template/.env
@@ -1,2 +1,9 @@
+# Enable CSS modules
+ENABLE_CSS_MODULES=false
+
 # Remove hash from output filenames (eg. main.35dbe941.js)
-REACT_APP_NO_FILE_HASH=false
+DISABLE_FILE_HASH=false
+
+# Path to optional webpack config customizer (from app root)
+# Source example: `module.exports = (opts, env) => opts`
+WEBPACK_CUSTOMIZER_PATH=
