--- a/packages/react-scripts/template/.env
+++ b/packages/react-scripts/template/.env
@@ -4,6 +4,9 @@ ENABLE_CSS_MODULES=false
 # Remove hash from output filenames (eg. main.35dbe941.js)
 DISABLE_FILE_HASH=false
 
+# Disable Uglify (e.g. local debugging)
+DISABLE_MINIFICATION=false
+
 # Path to optional webpack config customizer (from app root)
 # Source example: `module.exports = (opts, env) => opts`
 WEBPACK_CUSTOMIZER_PATH=
