Disable file hash in template by default

--- a/packages/react-scripts/template/.env
+++ b/packages/react-scripts/template/.env
@@ -2,7 +2,7 @@
 ENABLE_CSS_MODULES=false
 
 # Remove hash from output filenames (eg. main.35dbe941.js)
-DISABLE_FILE_HASH=false
+DISABLE_FILE_HASH=true
 
 # Path to optional webpack config customizer (from app root)
 # Source example: `module.exports = (opts, env) => opts`
