--- a/packages/react-scripts/package.json
+++ b/packages/react-scripts/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jdcrensh/react-scripts",
-  "version": "1.0.12-0",
+  "version": "1.0.12-1",
   "description": "Configuration and scripts for Create React App.",
   "repository": "jdcrensh/create-react-app#custom",
   "license": "BSD-3-Clause",
@@ -10,7 +10,13 @@
   "bugs": {
     "url": "https://github.com/jdcrensh/create-react-app/issues"
   },
-  "files": ["bin", "config", "scripts", "template", "utils"],
+  "files": [
+    "bin",
+    "config",
+    "scripts",
+    "template",
+    "utils"
+  ],
   "bin": {
     "react-scripts": "./bin/react-scripts.js"
   },
