--- a/lerna.json
+++ b/lerna.json
@@ -14,7 +14,6 @@
     "cacheDir": ".changelog"
   },
   "packages": [
-    "packages/cra-plugin*",
-    "packages/react-scripts"
+    "packages/*"
   ]
 }
