--- a/packages/react-scripts-plugin-scss/package.json
+++ b/packages/react-scripts-plugin-scss/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.1",
   "description": "SCSS Plugin for Create React App",
   "main": "index.js",
-  "repository": "jdcrensh/create-react-app#custom",
+  "repository": "jdcrensh/create-react-app#jdcrensh",
   "author": "Jon Crenshaw <jdcrensh@gmail.com>",
   "license": "MIT",
   "dependencies": {
