--- a/packages/react-scripts/package.json
+++ b/packages/react-scripts/package.json
@@ -41,6 +41,7 @@
     "eslint-plugin-react": "7.4.0",
     "extract-text-webpack-plugin": "3.0.2",
     "file-loader": "1.1.5",
+    "find-root": "^1.1.0",
     "fs-extra": "3.0.1",
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
