--- a/packages/react-scripts/package.json
+++ b/packages/react-scripts/package.json
@@ -1,6 +1,6 @@
 {
   "name": "salesforce-react-scripts",
-  "version": "1.1.0-0",
+  "version": "1.1.0",
   "description": "Configuration and scripts for Create React App for Salesforce",
   "repository": "jdcrensh/create-react-app#salesforce",
   "license": "MIT",
@@ -57,8 +57,8 @@
     "promise": "8.0.1",
     "promisify-node": "^0.4.0",
     "raf": "3.4.0",
-    "stream-buffers": "^3.0.1",
     "react-dev-utils": "^5.0.0",
+    "stream-buffers": "^3.0.1",
     "style-loader": "0.19.0",
     "sw-precache-webpack-plugin": "0.11.4",
     "url-loader": "0.6.2",
