--- a/packages/react-scripts/package.json
+++ b/packages/react-scripts/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jdcrensh/react-scripts",
-  "version": "1.1.1",
+  "version": "1.1.2-0",
   "description": "Configuration and scripts for Create React App.",
   "repository": "jdcrensh/create-react-app#jdcrensh",
   "license": "MIT",
