--- a/packages/react-scripts/package.json
+++ b/packages/react-scripts/package.json
@@ -1,6 +1,6 @@
 {
   "name": "salesforce-react-scripts",
-  "version": "2.1.5",
+  "version": "2.1.6-0",
   "description": "Configuration and scripts for Create React App for Salesforce",
   "repository": "jdcrensh/create-react-app#salesforce",
   "license": "MIT",
@@ -55,9 +55,9 @@
     "jest": "23.6.0",
     "jest-pnp-resolver": "1.0.2",
     "jest-resolve": "23.6.0",
+    "jest-watch-typeahead": "^0.2.1",
     "jsforce": "1.9.1",
     "lodash": "4.17.11",
-    "jest-watch-typeahead": "^0.2.1",
     "mini-css-extract-plugin": "0.5.0",
     "node-status": "1.0.0",
     "optimize-css-assets-webpack-plugin": "5.0.1",
