--- a/packages/react-scripts/package.json
+++ b/packages/react-scripts/package.json
@@ -1,6 +1,6 @@
 {
-"name": "salesforce-react-scripts",
-  "version": "3.0.1",
+  "name": "salesforce-react-scripts",
+  "version": "3.0.2-0",
   "description": "Configuration and scripts for Create React App for Salesforce",
   "repository": {
     "type": "git",
