--- a/lerna.json
+++ b/lerna.json
@@ -1,8 +1,11 @@
 {
   "lerna": "2.6.0",
   "npmClient": "yarn",
-  "useWorkspaces": true,
   "version": "independent",
+  "packages": [
+    "packages/react-scripts",
+    "packages/react-scripts-plugin-*"
+  ],
   "changelog": {
     "repo": "jdcrensh/create-react-app",
     "labels": {
