--- a/packages/react-scripts/package.json
+++ b/packages/react-scripts/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jdcrensh/react-scripts",
-  "version": "3.4.1",
+  "version": "3.4.2-0",
   "description": "Configuration and scripts for Create React App.",
   "repository": {
     "type": "git",
