--- a/packages/react-scripts/package.json
+++ b/packages/react-scripts/package.json
@@ -1,6 +1,6 @@
 {
   "name": "salesforce-react-scripts",
-  "version": "4.0.3",
+  "version": "4.0.4-0",
   "description": "Configuration and scripts for Create React App for Salesforce",
   "repository": {
     "type": "git",
